--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Для моей любимой</title>
+  <title>Для моей Зефирки</title>
   <style>
     body {
       margin: 0;
@@ -12,24 +12,23 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      background: url("background.jpg") no-repeat center center/cover;
       font-family: "Segoe UI", sans-serif;
       text-align: center;
       overflow: hidden;
+      color: white;
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
     }
     h1 {
       font-size: 2.5rem;
-      color: white;
-      text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
       margin: 0 0 15px;
     }
     p {
       font-size: 1.2rem;
-      color: #fff;
       max-width: 300px;
+      margin-bottom: 20px;
     }
     button {
-      margin-top: 20px;
       padding: 12px 24px;
       font-size: 1rem;
       border: none;
@@ -42,6 +41,12 @@
     }
     button:hover {
       transform: scale(1.1);
+    }
+    footer {
+      position: absolute;
+      bottom: 20px;
+      font-size: 1rem;
+      max-width: 320px;
     }
     .heart {
       position: absolute;
@@ -60,14 +65,8 @@
       background: red;
       border-radius: 50%;
     }
-    .heart::before {
-      top: -10px;
-      left: 0;
-    }
-    .heart::after {
-      left: -10px;
-      top: 0;
-    }
+    .heart::before { top: -10px; left: 0; }
+    .heart::after { left: -10px; top: 0; }
     @keyframes floatUp {
       0% { transform: translateY(0) rotate(45deg); opacity: 1; }
       100% { transform: translateY(-600px) rotate(45deg); opacity: 0; }
@@ -75,10 +74,12 @@
   </style>
 </head>
 <body>
-  <h1>Любимая, я тебя люблю ❤️</h1>
-  <p>Ты — самое лучшее, что есть в моей жизни.  
-  Этот сайт я сделал только для тебя 💕</p>
-  <button onclick="alert('И буду любить всегда 💖')">Нажми меня</button>
+  <h1>Зефирка моя, я тебя люблю ❤️</h1>
+  <p>Ты — самое лучшее, что есть в моей жизни.<br>
+  Спасибо тебе, что ты есть в моей жизни💕</p>
+  <button onclick="alert('И буду любить всегда💖')">Нажми меня</button>
+
+  <footer>Если вдруг ты стала забывать, как я тебя люблю, он будет здесь всегда🌹</footer>
 
   <script>
     function createHeart() {
