--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
 </head>
 <body>
   <h1>Зефирка моя, я тебя люблю ❤️</h1>
-  <p>Ты — самое лучшее, что есть в моей жизни.<br>
+  <p>Я о тебе, кто мне всего дороже,
+боюсь писать.
+Вдруг кто-нибудь, любя,
+заговорит с другой,
+любимой тоже,
+словами, что нашёл
+я для тебя.<br>
   Спасибо тебе, что ты есть в моей жизни💕</p>
   <button onclick="alert('И буду любить всегда💖')">Нажми меня</button>
 
