--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
   </style>
 </head>
 <body>
-  <h1>Зефирка моя, я тебя люблю ❤️</h1>
+  <h1>Зефирка моя,
+    я тебя люблю ❤️</h1>
   <p>Я о тебе, кто мне всего дороже,
 боюсь писать.
 Вдруг кто-нибудь, любя,
