--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </style>
 </head>
 <body>
-  <h1>Зефирка моя,
+  <h1>Зефирка моя,<br>
     я тебя люблю ❤️</h1>
   <p>Я о тебе, кто мне всего дороже,
 боюсь писать.
