--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 словами, что нашёл
 я для тебя.<br>
   Спасибо тебе, что ты есть в моей жизни💕</p>
-  <button onclick="alert('И буду любить всегда💖')">Нажми меня</button>
+  <button onclick="alert('И БУДУ ЛЮБИТЬ ВСЕГДА💖')">Нажми меня</button>
 
   <footer>Если вдруг ты стала забывать, как я тебя люблю, он будет здесь всегда🌹</footer>
 
