--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       font-size: 1.2rem;
       max-width: 300px;
       margin-bottom: 20px;
+      white-space: pre-line;
     }
     button {
       padding: 12px 24px;
@@ -42,12 +43,22 @@
     button:hover {
       transform: scale(1.1);
     }
+
+    .click-counter {
+      color: white;
+      font-size: 1rem;
+      margin: 8px 0 0;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
+    }
+
     footer {
       position: absolute;
       bottom: 20px;
       font-size: 1rem;
       max-width: 320px;
     }
+
+    /* Летающие сердечки */
     .heart {
       position: absolute;
       width: 20px;
@@ -71,9 +82,40 @@
       0% { transform: translateY(0) rotate(45deg); opacity: 1; }
       100% { transform: translateY(-600px) rotate(45deg); opacity: 0; }
     }
+
+    /* Всплывающее окно — внутри body, не влияет на позиционирование */
+    .toast {
+      position: absolute;
+      left: 50%;
+      bottom: -60px;
+      transform: translateX(-50%) scale(0.9);
+      background: rgba(0, 0, 0, 0.85);
+      color: white;
+      padding: 16px 30px;
+      border-radius: 30px;
+      font-size: 1.3rem;
+      font-weight: bold;
+      box-shadow: 0 6px 20px rgba(255, 100, 150, 0.5);
+      z-index: 1000;
+      opacity: 0;
+      transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+      white-space: nowrap;
+      backdrop-filter: blur(5px);
+      pointer-events: none;
+    }
+
+    .toast.show {
+      bottom: 40px;
+      transform: translateX(-50%) scale(1);
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
+
+  <!-- Всплывающее окно — в теле body, но не мешает -->
+  <div id="loveToast" class="toast">И БУДУ ЛЮБИТЬ ВСЕГДА 💖</div>
+
   <h1>
     Зефирка моя,<br>
     я тебя люблю ❤️
@@ -84,13 +126,79 @@
 заговорит с другой,
 любимой тоже,
 словами, что нашёл
-я для тебя.<br>
-  Спасибо тебе, что ты есть в моей жизни💕</p>
-  <button onclick="alert('И БУДУ ЛЮБИТЬ ВСЕГДА💖')">Нажми меня</button>
+я для тебя.
+Спасибо тебе, что ты есть в моей жизни 💕</p>
 
-  <footer>Если вдруг ты стала забывать, как я тебя люблю, он будет здесь всегда🌹</footer>
+  <button onclick="handleClick()">Нажми меня</button>
+
+  <div class="click-counter">Кликов: <span id="clickCounter">0</span></div>
+
+  <footer>Если вдруг ты стала забывать, как я тебя люблю, он будет здесь всегда 🌹</footer>
 
   <script>
+    // === Проверка localStorage с защитой ===
+    const storageAvailable = (type) => {
+      try {
+        const storage = window[type];
+        const x = '__storage_test__';
+        storage.setItem(x, x);
+        storage.removeItem(x);
+        return true;
+      } catch (e) {
+        return false;
+      }
+    };
+
+    const canUseLocalStorage = storageAvailable('localStorage');
+
+    // === Счётчик ===
+    const counterElement = document.getElementById("clickCounter");
+    let count = 0;
+
+    if (canUseLocalStorage) {
+      count = parseInt(localStorage.getItem("zeffirkaClicks")) || 0;
+    }
+    counterElement.textContent = count;
+
+    function saveCount(num) {
+      if (canUseLocalStorage) {
+        try {
+          localStorage.setItem("zeffirkaClicks", num);
+        } catch (e) {
+          console.warn("Не удалось сохранить в localStorage", e);
+        }
+      }
+    }
+
+    // === Всплывающее окно ===
+    const toast = document.getElementById("loveToast");
+    let isAnimating = false;
+
+    function showToast() {
+      if (isAnimating) return;
+      isAnimating = true;
+
+      toast.classList.remove("show");
+      void toast.offsetWidth; // Принудительный сброс
+      toast.classList.add("show");
+
+      setTimeout(() => {
+        toast.classList.remove("show");
+        setTimeout(() => {
+          isAnimating = false;
+        }, 400);
+      }, 2500);
+    }
+
+    // === Клик ===
+    function handleClick() {
+      count++;
+      counterElement.textContent = count;
+      saveCount(count);
+      showToast();
+    }
+
+    // === Летающие сердечки ===
     function createHeart() {
       const heart = document.createElement("div");
       heart.className = "heart";
